Docs update, reconciliation, sprint-001 review and  polish POST Sprint-001